# Grocery-OCR

./: .gitignore  README.md  out.txt  pyproject.toml
src/: analyze.py  calculate.py  receipt.py  textract.py  util.py  visualize.py
