[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.4"
azure-core = "^1.29.6"
azure-ai-formrecognizer = "^3.3.2"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"
textdistance = "^4.6.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
